<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">APITest - League</string>
    <string name="get_info" translatable="false">Retrieve Summoner</string>
    <string name="recent_game" translatable="false">Recent Game</string>
    <string name="placeholder" translatable="false"></string>
    <string name="enter_text" translatable="false">[Enter Summoner Name]</string>
    <string name="field1" translatable="false">Summoner ID:</string>
    <string name="field2" translatable="false">Summoner Name:</string>
    <string name="field3" translatable="false">Summoner Icon ID:</string>
    <string name="field4" translatable="false">Summoner Level:</string>
    <string name="field5" translatable="false">Revision Date:</string>
    <string name="field_gameid" translatable="false">Game ID:</string>
    <string name="field_gamemode" translatable="false">Game Mode:</string>
    <string name="field_gametype" translatable="false">Game Type:</string>
    <string name="field_goldearned" translatable="false">Gold Earned:</string>
    <string name="field_ipearned" translatable="false">IP Earned:</string>
    <string name="game_championid" translatable="false">Champion ID:</string>
    <string name="game_gameid" translatable="false">Game ID:</string>
    <string name="game_gamemode" translatable="false">Game Mode:</string>
    <string name="game_gametype" translatable="false">Game Type:</string>
    <string name="game_ipearned" translatable="false">IP Earned:</string>
    <string name="game_mapid" translatable="false">Map ID:</string>
    <string name="game_spell1" translatable="false">Spell 1:</string>
    <string name="game_spell2" translatable="false">Spell 2:</string>
    <string name="game_teamid" translatable="false">Team ID:</string>
    <string name="stat_level" translatable="false">Level:</string>
    <string name="stat_goldearned" translatable="false">Gold Earned:</string>
    <string name="stat_timeplayed" translatable="false">Time Played:</string>
    <string name="stat_win" translatable="false">Match Outcome:</string>
    <string name="version" translatable="false">0.1.8.5</string>
    <string name="title_activity_last_game_played" translatable="false">Last Game Played</string>
    <string name="title_activity_recent_games" translatable="false">Recent Games</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="DNC" translatable="false">Do Not Click.</string>

</resources>