<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_data_background" >
    <ScrollView 
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:padding="5sp">
		<RelativeLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:background="#AAFFFFFF">
	        <TextView
		           android:id="@+id/recent_summoner"
		           android:layout_width="match_parent"
		           android:layout_height="50sp"
		           android:layout_alignParentTop="true"
		           android:paddingLeft="10sp"
		           android:paddingStart="5sp"
		           android:paddingRight="5sp"
		           android:paddingEnd="5sp"
		           android:textStyle="italic"
		           android:textSize="20sp"
		           android:textColor="#757575"
		           android:gravity="center"
		           android:text="@string/placeholder" />
		    <View
		            android:id="@+id/bar1"
		            android:layout_width="match_parent"
		            android:layout_height="1dip"
		            android:layout_below="@id/recent_summoner"
		            android:background="#757575"
		            android:layout_marginLeft="4dip"
		            android:layout_marginRight="4dip" />
		     <TextView
		           android:id="@+id/field1"
		           android:layout_width="wrap_content"
		           android:layout_height="50sp"
		           android:layout_below="@id/recent_summoner"
		           android:paddingLeft="10sp"
		           android:paddingStart="10sp"
		           android:paddingRight="10sp"
		           android:paddingEnd="10sp"
		           android:textStyle="italic"
		           android:textSize="20sp"
		           android:textColor="#757575"
		           android:gravity="center"
		           android:text="@string/field_gameid" />
		    <TextView
		           android:id="@+id/recent_gameid"
		           android:layout_width="wrap_content"
		           android:layout_height="50sp"
		           android:layout_below="@id/recent_summoner"
		           android:layout_alignParentRight="true"
		           android:layout_alignParentEnd="true"
		           android:paddingLeft="10sp"
		           android:paddingStart="10sp"
		           android:paddingRight="10sp"
		           android:paddingEnd="10sp"
		           android:textStyle="italic"
		           android:textSize="20sp"
		           android:textColor="#757575"
		           android:gravity="center"
		           android:text="@string/placeholder" />
		    <View
		            android:id="@+id/bar2"
		            android:layout_width="match_parent"
		            android:layout_height="1dip"
		            android:layout_below="@id/recent_gameid"
		            android:background="#E0E0E0"
		            android:layout_marginLeft="4dip"
		            android:layout_marginRight="4dip" />
		    <TextView
		           android:id="@+id/field2"
		           android:layout_width="wrap_content"
		           android:layout_height="50sp"
		           android:layout_below="@id/recent_gameid"
		           android:paddingLeft="10sp"
		           android:paddingStart="10sp"
		           android:paddingRight="10sp"
		           android:paddingEnd="10sp"
		           android:textStyle="italic"
		           android:textSize="20sp"
		           android:textColor="#757575"
		           android:gravity="center"
		           android:text="@string/field_gamemode" />
		    <TextView
		           android:id="@+id/recent_gamemode"
		           android:layout_width="wrap_content"
		           android:layout_height="50sp"
		           android:layout_below="@id/recent_gameid"
		           android:layout_alignParentRight="true"
		           android:layout_alignParentEnd="true"
		           android:paddingLeft="10sp"
		           android:paddingStart="10sp"
		           android:paddingRight="10sp"
		           android:paddingEnd="10sp"
		           android:textStyle="italic"
		           android:textSize="20sp"
		           android:textColor="#757575"
		           android:gravity="center"
		           android:text="@string/placeholder" />
		    <View
		            android:id="@+id/bar3"
		            android:layout_width="match_parent"
		            android:layout_height="1dip"
		            android:layout_below="@id/recent_gamemode"
		            android:background="#E0E0E0"
		            android:layout_marginLeft="4dip"
		            android:layout_marginRight="4dip" />
		    <TextView
		           android:id="@+id/field3"
		           android:layout_width="wrap_content"
		           android:layout_height="50sp"
		           android:layout_below="@id/recent_gamemode"
		           android:paddingLeft="10sp"
		           android:paddingStart="10sp"
		           android:paddingRight="10sp"
		           android:paddingEnd="10sp"
		           android:textStyle="italic"
		           android:textSize="20sp"
		           android:textColor="#757575"
		           android:gravity="center"
		           android:text="@string/field_gametype" />
		    <TextView
		           android:id="@+id/recent_gametype"
		           android:layout_width="wrap_content"
		           android:layout_height="50sp"
		           android:layout_below="@id/recent_gamemode"
		           android:layout_alignParentRight="true"
		           android:layout_alignParentEnd="true"
		           android:paddingLeft="10sp"
		           android:paddingStart="10sp"
		           android:paddingRight="10sp"
		           android:paddingEnd="10sp"
		           android:textStyle="italic"
		           android:textSize="20sp"
		           android:textColor="#757575"
		           android:gravity="center"
		           android:text="@string/placeholder" />
		    <View
		            android:id="@+id/bar4"
		            android:layout_width="match_parent"
		            android:layout_height="1dip"
		            android:layout_below="@id/recent_gametype"
		            android:background="#E0E0E0"
		            android:layout_marginLeft="4dip"
		            android:layout_marginRight="4dip" />
		    <TextView
		           android:id="@+id/field4"
		           android:layout_width="wrap_content"
		           android:layout_height="50sp"
		           android:layout_below="@id/recent_gametype"
		           android:paddingLeft="10sp"
		           android:paddingStart="10sp"
		           android:paddingRight="10sp"
		           android:paddingEnd="10sp"
		           android:textStyle="italic"
		           android:textSize="20sp"
		           android:textColor="#757575"
		           android:gravity="center"
		           android:text="@string/field_ipearned" />
		    <TextView
		           android:id="@+id/recent_ipearned"
		           android:layout_width="wrap_content"
		           android:layout_height="50sp"
		           android:layout_below="@id/recent_gametype"
		           android:layout_alignParentRight="true"
		           android:layout_alignParentEnd="true"
		           android:paddingLeft="10sp"
		           android:paddingStart="10sp"
		           android:paddingRight="10sp"
		           android:paddingEnd="10sp"
		           android:textStyle="italic"
		           android:textSize="20sp"
		           android:textColor="#757575"
		           android:gravity="center"
		           android:text="@string/placeholder" />
		    <View
		            android:id="@+id/bar5"
		            android:layout_width="match_parent"
		            android:layout_height="1dip"
		            android:layout_below="@id/recent_ipearned"
		            android:background="#E0E0E0"
		            android:layout_marginLeft="4dip"
		            android:layout_marginRight="4dip" />
		    <TextView
		           android:id="@+id/field5"
		           android:layout_width="wrap_content"
		           android:layout_height="50sp"
		           android:layout_below="@id/recent_ipearned"
		           android:paddingLeft="10sp"
		           android:paddingStart="10sp"
		           android:paddingRight="10sp"
		           android:paddingEnd="10sp"
		           android:textStyle="italic"
		           android:textSize="20sp"
		           android:textColor="#757575"
		           android:gravity="center"
		           android:text="@string/field_goldearned" />
		    <View
		            android:id="@+id/bar6"
		            android:layout_width="match_parent"
		            android:layout_height="1dip"
		            android:layout_below="@id/recent_gametype"
		            android:background="#E0E0E0"
		            android:layout_marginLeft="4dip"
		            android:layout_marginRight="4dip" />
		    <TextView
		           android:id="@+id/recent_goldearned"
		           android:layout_width="wrap_content"
		           android:layout_height="50sp"
		           android:layout_below="@id/recent_ipearned"
		           android:layout_alignParentRight="true"
		           android:layout_alignParentEnd="true"
		           android:paddingLeft="10sp"
		           android:paddingStart="10sp"
		           android:paddingRight="10sp"
		           android:paddingEnd="10sp"
		           android:textStyle="italic"
		           android:textSize="20sp"
		           android:textColor="#757575"
		           android:gravity="center"
		           android:text="@string/placeholder" />

		</RelativeLayout>
	</ScrollView>
</RelativeLayout>